hard-gists/905137/run.log
=== Docker Run Log for 905137 ===
Started at: Mi 29. Okt 18:16:43 CET 2025

[2025-10-29 18:16:44] START: Running container for 905137
[2025-10-29 18:16:44] SUCCESS: Container fe7d9fc68570ce1c1ac916d151616357a48db0fdfa64d40f6014f123024f2fd7 started for 905137
=== Container logs for 905137 ===
  File "/snippet.py", line 166
    print "Permission denied"
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 905137 ===
[2025-10-29 18:16:46] INFO: Container fe7d9fc68570ce1c1ac916d151616357a48db0fdfa64d40f6014f123024f2fd7 has stopped
